8.Networkpolicie/AllowEgressToDb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dbapp-to-mysql-db
spec:
  podSelector:
    matchLabels:
      app: dbapp
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mysql-db
      namespaceSelector:
        matchLabels:
          name: db
    ports:
    - port: 3306
      protocol: TCP
