8.Networkpolicie/DenyAllIngress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: db
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: app
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
